# Intel-iGPU-NPU-Benchmark

./: LICENSE  README.md
DPC++/: CPU_matrix.cpp  GPU_matrix_OpenMP.cpp  GPU_matrix_SYCL.cpp
OpenVINO/: CMakeLists.txt  xPU_matrix_OpenVINO.cpp
